force-app/main/default/objects/ServiceHistory__c/ServiceHistory__c.object-meta.xml
<CustomObject>
    <label>Time Ticket</label>
    <nameField>
        <label>Time Ticket</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>