force-app/main/default/objects/ServiceHistory__c/fields/Building_NameAddress__c.field-meta.xml
<CustomField>
    <fullName>Building_NameAddress__c</fullName>
    <label>Building Name/Address</label>
    <type>TextArea</type>
</CustomField>