force-app/main/default/objects/ServiceHistory__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case that relates Time Ticket to Invoice</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Time Tickets</relationshipLabel>
    <relationshipName>Time_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>