force-app/main/default/objects/ServiceHistory__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment</label>
    <referenceTo>Equipment__c</referenceTo>
    <relationshipLabel>Time Tickets</relationshipLabel>
    <relationshipName>Time_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>