force-app/main/default/objects/ServiceHistory__c/fields/Equipment_Name__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Name__c</fullName>
    <label>Equipment Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>