force-app/main/default/objects/ServiceHistory__c/fields/Overtime_1_5_Onsite_Time__c.field-meta.xml
<CustomField>
    <fullName>Overtime_1_5_Onsite_Time__c</fullName>
    <label>Overtime 1.5x Onsite Time</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>