force-app/main/default/objects/ServiceHistory__c/fields/Overtime_1_7_Travel_time__c.field-meta.xml
<CustomField>
    <fullName>Overtime_1_7_Travel_time__c</fullName>
    <label>Overtime 1.7x Travel time</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>