force-app/main/default/objects/ServiceHistory__c/fields/Overtime_Onsite_time__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Onsite_time__c</fullName>
    <label>Overtime Onsite time</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>