force-app/main/default/objects/ServiceHistory__c/fields/Problem_reported__c.field-meta.xml
<CustomField>
    <fullName>Problem_reported__c</fullName>
    <label>Problem reported</label>
    <length>255</length>
    <type>Text</type>
</CustomField>