force-app/main/default/objects/ServiceHistory__c/fields/Repoted_By__c.field-meta.xml
<CustomField>
    <fullName>Repoted_By__c</fullName>
    <label>Repoted By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>