force-app/main/default/objects/ServiceHistory__c/fields/Service_Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Report_Date__c</fullName>
    <label>Service Report Date</label>
    <type>Date</type>
</CustomField>