force-app/main/default/objects/ServiceHistory__c/fields/Standard_Onsite_time__c.field-meta.xml
<CustomField>
    <fullName>Standard_Onsite_time__c</fullName>
    <label>Standard Onsite time</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>