force-app/main/default/objects/ServiceHistory__c/fields/Technician_Arrival_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Technician_Arrival_DateTime__c</fullName>
    <label>Technician Arrival DateTime</label>
    <type>DateTime</type>
</CustomField>