force-app/main/default/objects/ServiceHistory__c/fields/Technician_Departure_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Technician_Departure_DateTime__c</fullName>
    <label>Technician Departure DateTime</label>
    <type>DateTime</type>
</CustomField>