force-app/main/default/objects/ServiceHistory__c/fields/Time_unit_returned_to_service__c.field-meta.xml
<CustomField>
    <fullName>Time_unit_returned_to_service__c</fullName>
    <label>Time unit returned to service</label>
    <type>DateTime</type>
</CustomField>