force-app/main/default/objects/ServiceHistory__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type of Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CallBack</fullName>
                <label>Call Back</label>
            </value>
            <value>
                <fullName>Maintenance</fullName>
                <label>MAINTENANCE</label>
            </value>
            <value>
                <fullName>Test</fullName>
                <label>TEST</label>
            </value>
            <value>
                <fullName>REPAIR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>