force-app/main/default/objects/ServiceHistory__c/fields/Vendor_Building_ID__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Building_ID__c</fullName>
    <label>Vendor Building ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>