force-app/main/default/objects/ServiceHistory__c/fields/Vendor_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Contract_Number__c</fullName>
    <label>Vendor Contract Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>