force-app/main/default/objects/ServiceHistory__c/fields/Vendor_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Equipment__c</fullName>
    <label>Vendor Equipment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>