force-app/main/default/objects/ServiceHistory__c/fields/Vendor_Notification__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Notification__c</fullName>
    <label>Vendor Notification</label>
    <length>30</length>
    <type>Text</type>
</CustomField>