force-app/main/default/objects/ServiceHistory__c/fields/Vendor_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Work_Order__c</fullName>
    <label>Vendor Work Order</label>
    <length>20</length>
    <type>Text</type>
</CustomField>