force-app/main/default/objects/ServiceHistory__c/fields/Work_description__c.field-meta.xml
<CustomField>
    <fullName>Work_description__c</fullName>
    <label>Work description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>